# vulcan-demo

./: .gitignore  .gitmodules  ADMIN_README.md  CMakeLists.txt  README.md  app.py  baselines.ndjson  evaluator.py  initial_program.cpp  initial_program.py  llm.py  seed_baselines.py  test_api.py  test_evaluator.py  test_python_evaluator.py
prompts/: CREATE_EVOLVE.md  EVICTION.md  README.md
prompts/extensions/: 00-multiobjective.md  01-prompt-engineering.md  02-embedding-diversity-sampler.md  03-exploration-schedule.md  04-workload-generalization.md  05-analyze-data.md  06-freeform-python.md  README.md
src/: run_algo.cpp  util.h
templates/: admin.html  index.html
